service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-intro-app-service
  labels:
    app: football-intro-app
spec:
  type: NodePort
  selector:
    app: football-intro-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
