servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-intro-app-metrics
  namespace: default
  labels:
    app: football-intro-app
spec:
  type: ClusterIP
  selector:
    app: football-intro-app
  ports:
  - name: metrics
    port: 9113
    targetPort: 9113
    protocol: TCP
