04-deny-specific-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic-from-test-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: football-intro-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: role
          operator: NotIn
          values:
          - blocked
    ports:
    - protocol: TCP
      port: 80
